# VeriWeave-VITA

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
data/graph/: evidence_graph.json  property_graph.json  schema.json
data/policies/: cybersecurity_access_control_policy.md  department_ai_policy_v1.md  department_ai_policy_v2.md  model_governance_sample.md
data/tasks/: claimgraph_benchmark.jsonl  horizon_challenge.jsonl  veriweave_benchmark.jsonl
docs/: architecture.md  benchmark_protocol.md
src/claimgraph/: __init__.py  agents.py  claims.py  config.py  data_loader.py  evaluators.py  graph.py  main.py  ollama_client.py  report_generator.py  retrieval.py  stats.py  utils.py  validators.py
src/veriweave/: __init__.py  agents.py  argumentation.py  audit.py  boltzmann_challenge.py  boltzmann_policy_attention.py  claims.py  cli.py  config.py  data_loader.py  envelope.py  evaluators.py  graph.py  horizon.py  horizon_challenge.py  main.py  models.py  ollama_client.py  precedence.py  provenance_robust_selection.py  report_generator.py  retrieval.py  stats.py  temporal.py  utils.py  validators.py  vita.py  vita_challenge.py
tests/: test_audit.py  test_boltzmann_policy_attention.py  test_evaluator_metrics.py  test_graph.py  test_horizon.py  test_provenance_robust_selection.py  test_retrieval.py  test_validation.py  test_vita.py
